authenticationservice-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authenticationservice-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authenticationservice
  template:
    metadata:
      labels:
        app: authenticationservice
    spec:
      containers:
      - name: authenticationservice
        image: ricardojcsampaio/authenticationservice:latest

---
apiVersion: v1
kind: Service
metadata: 
  name: authentication-clusterip-srv
spec:
  type: ClusterIP
  selector: 
    app: authenticationservice
  ports:
    - name: authenticationservice
      protocol: TCP
      port: 80
      targetPort: 80
