credentials-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: credentials-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: credentialsservice
  template:
    metadata:
      labels:
        app: credentialsservice
    spec:
      containers:
      - name: credentialsservice
        image: ricardojcsampaio/credentialsservice:latest

---
apiVersion: v1
kind: Service
metadata: 
  name: credentials-clusterip-srv
spec:
  type: ClusterIP
  selector: 
    app: credentialsservice
  ports:
  - name: credentialsservice
    protocol: TCP
    port: 80
    targetPort: 80
