seq-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seq-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seq
  template:
    metadata:
      labels:
        app: seq
    spec:
      containers:
        - name: seq
          image: datalust/seq:latest
          ports:
            - containerPort: 5341
          volumeMounts:
          - mountPath: /var/opt/seq/data
            name: volume
      volumes:
      - name: volume
        persistentVolumeClaim:
          claimName: seq-claim
---
apiVersion: v1
kind: Service
metadata:
  name: seq-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: seq
  ports:
  - name: seq-port
    protocol: TCP
    port: 5341
    targetPort: 5341

---
apiVersion: v1
kind: Service
metadata:
  name: seq
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: seq
