ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: acme.com
      http:
        paths:
          - path: /v1/authentication
            pathType: Prefix
            backend:
              service:
                name: authentication-clusterip-srv
                port:
                  number: 80
          - path: /credentials
            pathType: Prefix
            backend:
              service:
                name: credentials-clusterip-srv
                port:
                  number: 80
